<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Google Inc. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">UAMP</string>
    <string name="skip_back_10s">Skip back 10s</string>
    <string name="skip_forward_10s">Skip forward 10s</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="menu_music_queue">Queue</string>
    <string name="album_art_alt">Album art</string>
    <string name="duration_unknown">--:--</string>
    <string name="duration_format">%d:%02d</string>

    <string name="cast_context_error" translatable="false">Failed to get Cast context. Try updating Google Play Services and restart the app.</string>
    <string name="discography">Discography</string>
    <string name="official_website">Official website</string>
    <string name="link_to_wiki">Page on Wikipedia</string>
    <string name="about_project">About project</string>
    <string name="share">Share</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="network_error_message">Music Service Connection Network Failure. \n\nWe apologise for the inconvenience. Help us to improve the service by writing positive feedback on the Google Play market. \n\nThank You!</string>
    <string name="network_error_message_free_plan">We apologise for the inconvenience. \n\nThe current Pricing Plan for this music storage is Free / 0$. According to its specs, there is a limit for Downloading (1 Gb / day). If You see this message, please wait until the next day, when the limit will be restarted. \n\nHelp us to improve the service by writing positive feedback on the Google Play market. Thank You!</string>

<!-- Google AdMob-->
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_now_playing_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="inter_media_item_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_media_item_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>

    <string name="official_website_url" translatable="false">https://github.com/android/uamp/blob/master/docs/FullGuide.md</string>
    <string name="link_to_wiki_url" translatable="false">https://github.com/android/uamp/blob/master/docs/FullGuide.md</string>
    <string name="about_project_url" translatable="false"></string>
    <string name="privacy_policy_url" translatable="false"></string>
    <string name="logo">Logo</string>
    <string name="search_music">Search music</string>
</resources>
