<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_outline_dashboard_24px"
            android:title="@string/discography" />
        <item
            android:id="@+id/nav_site"
            android:icon="@drawable/ic_outline_tab_24px"
            android:title="@string/official_website" />
        <item
            android:id="@+id/nav_wiki"
            android:icon="@drawable/ic_outline_info_24px"
            android:title="@string/link_to_wiki" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_outline_insert_emoticon_24px"
            android:title="@string/about_project" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_baseline_lock_open_24px"
            android:title="@string/privacy_policy" />
    </group>

</menu>